Fixed JSON issue, now stuck with both player choices getting linked to the div

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -10,3 +10,9 @@ h1{
 .quizArea{
   display: none;
 }
+.wrapper{
+  display: flex;
+}
+#p2{
+  display:none;
+}
